- Improvement: RAIDES - Add a warning when the completed qualification degree has the same code as registration degree code (or precedent degree code) [#UL-ISA-5580]

2.24.15 (31-03-2025)
- Bug fix: add missing labels (RAIDES) [#ISCTE-FENIXEDU-1087]
- Bug fix: PRIES salary bonus (update XSD) [#UL-FF-3543]

2.24.14 (12-03-2025)
- Improvement: Add new attributes to RAIDES log [#ISCTE-FENIXEDU-1021]

2.24.13 (27-02-2025)
- Refactor: RAIDES: Allow to report grant owner information only by student statute [#ISCTE-FENIXEDU-1012]

2.24.12 (24-02-2025)
- Refactor: Move PrecedentDegreeInformation relations from the StudentCandidacy to Registration [#qubIT-Fenix-6617]

2.24.11 (04-02-2025)
- Bug fix: Apply rounding to RAIDES accumulated credits [#qubIT-Fenix-6596]

2.24.10 (31-01-2025)
- Refactor: Remove usage of ITreasuryBridgeAPI#getTuitionForRegistrationTreasuryEvent [#qubIT-Fenix-6565]

2.24.9 (06-01-2025)
- Refactor: Update XSD to RAIDES24 (phase 1) [UL-REIT-4198]
- Refactor: Remove the IngestSasScholarshipSicabe task [#qubIT-Fenix-6348]

2.24.8 (10-12-2024)
- Improvement: Allow to resend scholarship candidacies to SICABE [#UL-FMD-1133]
- Refactor: Remove ScholarshipShip service to fill old Excel files [#qubIT-Fenix-6330]

2.24.7 (14-11-2024)
- Bug fix: Rename label SasScholarshipData.ingressionRegime [#ISCTE-FENIXEDU-884]

2.24.6 (22-10-2024)
- Improvement: Remove RAIDES MOBILITY_SCHOOL_LEVEL mapping [#qubIT-Fenix-6000]

2.24.5 (17-10-2024)
- Bug fix: RAIDES add action for missing mapping for grade / misspelling action [#qubIT-Fenix-5945]

2.24.4 (18-09-2024)
- Improvement: Allow to remove unnecessary RAIDES survey questions to mobility students [#qubIT-Fenix-5805]

2.24.3 (17-09-2024)
- Improvement: Allow to filter registrations for RAIDES survey by degree types [#qubIT-Fenix-5804]
- Improvement: Remove unnecessary RAIDES survey questions to mobility students [#qubIT-Fenix-5805]

2.24.2 (10-09-2024)