@@ -1,3 +1,4 @@
+- Bug fix: Fix Excel data export of RAIDES [#qubIT-Fenix-6874]
 - Improvement: RAIDES - Add a warning when the completed qualification degree has the same code as registration degree code (or precedent degree code) [#UL-ISA-5580]
 
 2.24.15 (31-03-2025)
